[metadata]
name = tinycoinlib
version = attr: tinycoinlib.__version__
author = BigCoinBoy
author_email = bigcoinboy@protonmail.com
description = Any coin (Bitcoin, Litecoin, Dogecoin..) RPC client and utilities for Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
platform = any
url = https://github.com/bigcoinboy/tinycoinlib
project_urls =
    Bug Tracker = https://github.com/bigcoinboy/tinycoinlib/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src
